tests/syntax/error_keyword_declare.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g error_keyword_declare.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: error_keyword_declare.silly:7:7: error: parse error: mismatched input 'INT32' expecting IDENTIFIER
// CHECK:     7 | INT32 INT32;
// CHECK:       |       ^

INT32 INT32;
